refactor: turn all placeholder draft posts private

--- a/src/content/blog/building-dual-agent-system.mdx
+++ b/src/content/blog/building-dual-agent-system.mdx
@@ -3,7 +3,7 @@ title: "Building a dual-agent system for semantic parsing"
 description: "Exploring the architecture of a two-agent system that separates understanding from execution, improving reliability in complex parsing tasks."
 publishDate: 2024-12-12
 tags: ["AI", "agents", "semantic-parsing"]
-draft: false
+draft: true
 ---
 
 This post explores the architecture behind a dual-agent system designed for semantic parsing tasks.
