--- a/src/content/blog/why-intermediate-representations-matter.mdx
+++ b/src/content/blog/why-intermediate-representations-matter.mdx
@@ -3,7 +3,7 @@ title: "Why intermediate representations matter"
 description: "How introducing intermediate layers between user intent and system action can dramatically improve AI system reliability."
 publishDate: 2024-12-03
 tags: ["AI", "architecture", "design-patterns"]
-draft: false
+draft: true
 ---
 
 One of the most powerful patterns in building reliable AI systems is the introduction of intermediate representations.
