--- a/src/content/blog/typography-showcase.mdx
+++ b/src/content/blog/typography-showcase.mdx
@@ -37,7 +37,7 @@ H6 represents the final level of heading hierarchy. It's styled distinctively wi
 Beyond headings, prose supports various inline text styles:
 
 - **Bold text** draws attention to key terms and makes them stand out
-- *Italic text* provides emphasis or indicates titles
+- _Italic text_ provides emphasis or indicates titles
 - `Inline code` displays technical terms or file names
 - [Links to other pages](/blog) connect to related content
 
