chore: minor cleanup

--- a/src/content/blog/code-blocks-showcase.mdx
+++ b/src/content/blog/code-blocks-showcase.mdx
@@ -349,7 +349,7 @@ YAML shows keys, values, anchors, and various data types.
 
 # STRING: unquoted, single-quoted, double-quoted
 title: Unquoted String Value
-single_quoted: 'String with ''escaped'' quotes'
+single_quoted: "String with 'escaped' quotes"
 double_quoted: "String with \"escaped\" quotes\nand newline"
 
 # NUMBER: integers and floats
