--- a/src/content/pages/about.mdx
+++ b/src/content/pages/about.mdx
@@ -42,7 +42,7 @@ of owning for far longer, barely following along. To this day I still choose
 the longer videos because that’s how I learn: absorb as much data as possible,
 build badly, wring the world dry for answers, until one day you wake up and the
 concepts click... not always in line with common understanding, but in ways
-that work for me. Always a deep, _resounding_ click.
+that work for me.
 
 Two years later, after a lifetime of `final_final_v2_final.psd`, I discovered
 semantic versioning. A year after that, I learned what compression was for the
