refactor: namespace component types

--- a/src/content/pages/uses.mdx
+++ b/src/content/pages/uses.mdx
@@ -5,7 +5,7 @@ description: A curated list of the software, hardware, and tools I use to work e
 
 ## Then
 
-From the moment I got my hands on Logic Pro 9, Macbooks have been my default. Some time around 2010 an older friend of mine lent me theirs for a weekend – he wanted me to make some changes to something he was working on.  He had gotten me into music production a few years earlier; I’d been using FL Studio 7 on Windows since he gave me his copy in 2006.
+From the moment I got my hands on Logic Pro 9, Macbooks have been my default. Some time around 2010 an older friend of mine lent me theirs for a weekend – he wanted me to make some changes to something he was working on. He had gotten me into music production a few years earlier; I’d been using FL Studio 7 on Windows since he gave me his copy in 2006.
 
 I started to experiment with third-party plug-ins as I ventured deeper into music production – my first industry-grade suite was Native Instruments Komplete 9. After years of squeezing every bit of realism I could out of the stock plug-ins that came with the DAW, I suddenly had access to a substrate of realistic, synthetic sounds I could use to craft layered, multi-dimensional pieces. NI-9’s Session Horns Pro is where my appreciation for big brass came from.
 
@@ -45,7 +45,7 @@ What else did I need... a CPU? Understood. Some RAM? I knew that one. A motherbo
 
 Eventually I had collated the full list, so I sought out a second opinion. My cousin brought it to my attention that I was building a cyborg.
 
-I decided to go with Pop!_OS for this machine – I’ve become comfortable with Linux, and Pop! lets me focus on creating things. Putting all the pieces together was mentally and physically satisfying. It took about a day and a half for me to finish it; knowing the purpose of every part really changes how you engage with the whole. I decided on a Keychron K3 Max keyboard, and stuck with a Magic Trackpad for comfort.
+I decided to go with Pop!\_OS for this machine – I’ve become comfortable with Linux, and Pop! lets me focus on creating things. Putting all the pieces together was mentally and physically satisfying. It took about a day and a half for me to finish it; knowing the purpose of every part really changes how you engage with the whole. I decided on a Keychron K3 Max keyboard, and stuck with a Magic Trackpad for comfort.
 
 ## Next
 
