--- a/src/content/uses/next.mdx
+++ b/src/content/uses/next.mdx
@@ -1,6 +1,6 @@
 ---
 title: Next
-description: What I'm exploring and planning to learn.
+description: The tools, hardware and software I've been exploring and hope to adopt in the near future.
 ---
 
 One of the first things I did once I had Ollama up and running was pull in `qwen3:32b`. I asked Qwen to build a game of snake, just to see what I was working with... within a few turns I had a functional prototype. These weren't frontier models, but I immediately saw the potential.
