--- a/src/content/uses/now.mdx
+++ b/src/content/uses/now.mdx
@@ -1,6 +1,6 @@
 ---
 title: Now
-description: My current hardware, software, and workflow setup.
+description: The tools, hardware and software I use to work efficiently and make the most of my free time.
 ---
 
 At the end of 2025, I was in the market for something more current. The iMac was now about 12 years old, Apple had stopped supporting the model years ago, and I'd had to restore it from backups at least twice. I'd been talking to my cousins overseas about their own setups; they're both gamers and one of them had been into custom builds for a while.
