--- a/src/content/uses/then.mdx
+++ b/src/content/uses/then.mdx
@@ -1,6 +1,6 @@
 ---
 title: Then
-description: A look back at my early setup and how I got started.
+description: A look back at the tools, hardware and software that have shaped my journey so far.
 ---
 
 From the moment I got my hands on Logic Pro 9, Macbooks have been my default. Some time around 2010 an older friend of mine lent me theirs for a weekend – he wanted me to make some changes to something he was working on. He had gotten me into music production a few years earlier; I'd been using FL Studio 7 on Windows since he gave me his copy in 2006.
